# MAB_Framework

./: .gitignore  README.md  bandit  pyproject.toml  requirements.txt  run.py
BanditLab/: LICENSE  pyproject.toml  run.py  setup.py
BanditLab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BanditLab/algorithms/: base.py  custom_ts_bandit.py  epsilon_greedy.py  neural_ucb.py  nn_agp_adaptive.py  nn_agp_ucb.py  nn_bandit_limited_memory.py  nn_ts_b.py  noncontextual_ts_bandit.py  thompson_sampling.py  ucb.py
BanditLab/data/fgts_exp_1/: X.csv
BanditLab/experiment/: logger.py  runner.py
BanditLab/experiment/fgts_lasso/: results_fgts_lasso.json
BanditLab/experiment/mushrooms/: results_glm_ts_laplace.json  results_linucb.json
BanditLab/models/: __init__.py  cmab_models.py  gp_rff_model.py  kernel_ucb_model.py  nn_agp_model.py
BanditLab/plots/: plot_results.py
BanditLab/scripts/: reproduce_cmab_bandits.py  reproduce_fgts_lasso.py  reproduce_nn_agp.py  run_experiment.py  run_mushrooms.py
algorithms/: __init__.py  base.py  bootstrap_ts_bandit.py  custom_ts_bandit.py  epsilon_greedy.py  fgts.py  gp_ucb_multikernel.py  gpts_bandit.py  linucb.py  neural_ucb.py  nn_agp_adaptive.py  nn_agp_ucb.py  nn_bandit_limited_memory.py  nn_ts_b.py  nn_ucb.py  noncontextual_ts_bandit.py  regcb_bandit.py  sgd_ts_bandit.py  thompson_sampling.py  ucb.py
benchmarks/: experiment_fgts.yaml  test.yaml
configs/: experiment_1.yaml  experiment_fgts.yaml
data_generators/: generate_e1_nn_agp.py
environments/: __init__.py  base.py  dataset_env.py
experiment/: api.py  cli.py  config_models.py  logger.py  metrics.py  results_epsilon_greedy_fixed.json  results_fgts_paper_test.json  results_linucb_sandbox.json  runner.py
mab_framework/: bandit  run.py
(+99 files in other folders)
