[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mab-framework"
version = "0.1.0"
description = "Modular Multi-Armed Bandit Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "pyyaml",
    "pydantic",
    "rich",
    "pandas"
]

[project.scripts]
bandit = "experiment.cli:main"
